--- a/pages/login/login.wxss
+++ b/pages/login/login.wxss
@@ -1,1 +1,27 @@
 /* pages/login/login.wxss */
+view{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+image{
+  margin-top: 80rpx;
+  width: 50%;
+  height: 80rpx;
+}
+.login-log{
+  width: 65%;
+  height: 300rpx;
+}
+button{
+  display: flex;
+  background-color:#4988f2;
+  margin-top: 100rpx;
+  align-items: center;
+  justify-content: center;
+  width: 80%!important;
+  height: 100rpx!important;
+  border-radius: 50rpx!important;
+  color: white;
+  font-size: 36rpx!important;
+}
