--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -3,8 +3,17 @@
   margin-bottom: 80rpx;
   padding-top: 0rpx;
 }
+.index-swiper{
+  height: 280rpx;
+  width: 100%;
+}
+.swiper-image{
+  height: 280rpx;
+  width: 100%;
+}
 .subcontainer{
   display: flex;
+  width: 90%;
   flex-direction: column;
   padding-right: 30rpx;
   padding-left: 30rpx;
@@ -19,6 +28,7 @@
 }
 
 .header image {
+  display: none;
   width: 100%;
   height: 280rpx;
 }
@@ -91,6 +101,7 @@ label text {
 
 .btn-submit {
   height: 80rpx;
+  width: 80%!important;
   line-height: 80rpx;
   padding: 0;
   width: 100%;
