--- a/components/tab-bar/index.wxml
+++ b/components/tab-bar/index.wxml
@@ -1,6 +1,6 @@
 <!--标签栏-->
 <view>
-  <i-tab-bar current="{{ current }}" bindchange="handleChange" fixed>
+  <i-tab-bar i-class="i-tab-bar" current="{{ current }}" bindchange="handleChange" fixed>
     <i-tab-bar-item key="index" icon="homepage" current-icon="homepage_fill" title="首页">
     </i-tab-bar-item>
     <i-tab-bar-item key="mine" icon="mine" current-icon="mine_fill" title="我的">
