--- a/pages/mine/mine.wxss
+++ b/pages/mine/mine.wxss
@@ -43,7 +43,7 @@ page {
     position: absolute;
     top: 254rpx;
     width: 100%;
-    height: 100%;
+    height: calc(100% - 254rpx - 130rpx);
     background-color: #fff;
     overflow: scroll;
 }
@@ -51,6 +51,14 @@ page {
 .suggestions {
     box-sizing: border-box;
     padding: 20rpx 30rpx;
+}
+
+.line{
+  display: none;
+  width: 100%;
+  margin-top: 5rpx;
+  height: 0.5rpx;
+  background-color: #746767;
 }
 
 .suggestions .title {
