--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -24,7 +24,7 @@
         <text class="question">姓名(匿名提交时请勿填写)：</text>
       </view>
       <view>
-        <input name="nickName" placeholder="请输入姓名"></input>
+        <input name="nickName" placeholder="请输入姓名" value="{{nickName}}"></input>
       </view>
     </view>
     <view class="form-item">
@@ -34,7 +34,7 @@
         <text class="asterisk">*</text>
       </view>
       <view>
-        <textarea name="description" placeholder="提出意见，最多500字" maxlength="500" />
+        <textarea name="description" placeholder="提出意见，最多500字" maxlength="500" value="{{suggestion}}" />
       </view>
     </view>
     <view class="form-item">
